--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
     <div class="container flex bg-black">
         <div class="left ">
             <div class="close">
-                <img width="30" class="invert" src="close.svg" alt="">
+                <img width="30" class="invert" src="/img/close.svg" alt="">
             </div>
             <div class="home bg-grey rounded m-1 p-1">
-                <div class="logo"><img width="110" class="invert" src="logo.svg" alt=""></div>
+                <div class="logo"><img width="110" class="invert" src="/img/logo.svg" alt=""></div>
                 <ul>
-                    <li><img class="invert" src="home.svg" alt="home">Home</li>
-                    <li><img class="invert" src="search.svg" alt="search">Search</li>
+                    <li><img class="invert" src="/img/home.svg" alt="home">Home</li>
+                    <li><img class="invert" src="/img/search.svg" alt="search">Search</li>
                 </ul>
             </div>
             <div class="library bg-grey rounded m-1 p-1">
                 <div class="heading">
-                    <img class="invert" src="playlist.svg" alt="">
+                    <img class="invert" src="/img/playlist.svg" alt="">
                     <h2>
                         Your library
                     </h2>
@@ -57,7 +57,7 @@
                 <div class="nav">
                     <div class="hamburgereContainer">
 
-                        <img width="40" class="invert hamburger" src="hamburger.svg" alt="">
+                        <img width="40" class="invert hamburger" src="/img/hamburger.svg" alt="">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M15 6L9.70711 11.2929C9.37377 11.6262 9.20711 11.7929 9.20711 12C9.20711 12.2071 9.37377 12.3738 9.70711 12.7071L15 18"
@@ -87,7 +87,7 @@
                             </svg>
                         </div>
 
-                        <img src="playlist1.jpg" alt="">
+                        <img src="/img/playlist1.jpg" alt="">
                         <h2>Happy Hits!</h2>
                         <p>Hits to boost your mood and fill you with happiness!</p>
                     </div>
@@ -224,15 +224,15 @@
                         <div class="songinfo">
                         </div>
                         <div class="songbuttons">
-                            <img id="previous" src="prevsong.svg" alt="">
-                            <img id="play" src="play.svg" alt="">
-                            <img id="next" src="nextsong.svg" alt="">
+                            <img id="previous" src="/img/prevsong.svg" alt="">
+                            <img id="play" src="/img/play.svg" alt="">
+                            <img id="next" src="/img/nextsong.svg" alt="">
                         </div>
                         <div class="timeval">
                             <div class="songtime" style="padding-left: 50px;">
                             </div>
                             <div class="volume">
-                                <img width="25" src="volume.svg" alt="">
+                                <img width="25" src="/img/volume.svg" alt="">
                                 <div class="range">
                                     <input type="range" name="volume" >
                                 </div>
